[gd_scene load_steps=4 format=3 uid="uid://dfrxuc8tpsene"]

[ext_resource type="Script" path="res://player/player.gd" id="1_43ebt"]
[ext_resource type="SpriteFrames" uid="uid://cjj0i0wvuqrwe" path="res://player/PlayerGreenSkin.tres" id="2_p6vsp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8tr7"]
size = Vector2(12, 17)

[node name="Player" type="CharacterBody2D"]
z_index = 10
collision_layer = 2
script = ExtResource("1_43ebt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = ExtResource("2_p6vsp")
animation = &"Run"
autoplay = "Run"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_o8tr7")

[node name="LadderCheck" type="RayCast2D" parent="."]
position = Vector2(0, -16)
target_position = Vector2(0, 15)
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.13
one_shot = true

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2(0, -12)

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_jump_buffer_timer_timeout"]
[connection signal="timeout" from="CoyoteJumpTimer" to="." method="_on_coyote_jump_timer_timeout"]
